# speech_recognition_demo

./: .gitignore  README.md  pyproject.toml  test_transcribe.py  transcribe.py
.devcontainer/: Dockerfile  devcontainer.json
__snapshots__/: test_transcribe.ambr
