[project]
name = "speech-recognition-demo"
version = "0.1.0"
description = "Minimal speech recognition demo with dev container cache pre-warming"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.53.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "typer>=0.20.0",
]

[project.scripts]
transcribe = "transcribe:app"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "syrupy>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
